# MyPersonalPractices

./: .gitignore  README.md
Node.js/notes-app/: app.js  notes.js
Rust/va/: Cargo.toml
Rust/va/src/: cli.yaml  data_store.rs  main.rs
Rust/vigilant-agent/: Cargo.toml  README.md
Rust/vigilant-agent/src/: data_store.rs  main.rs
