[package]
name = "vigilant-agent"
version = "0.1.0"
authors = ["vayt <torshizi1414@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"

[[bin]]
name = "vigilant_agent"
path = "src/vigilant_agent.rs"