[package]
name = "vigilant-agent"
version = "0.1.0"
authors = ["vayt <torshizi1414@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.10"